--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
         <h1>This is the sample coding file for learning git...</h1>
         <h2>Another smaller heading...</h2>
         <p>It's a sample para...</p>
+        <h3>This is the sample h3 heading...</h3>
+        <p>This is the another para...</p>
     </div>
 </body>
 </html>
