new commit --style --adding style

--- a/main.html
+++ b/main.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Git from CS50</title>
 </head>
+<style>
+    h1{
+        color: blue;
+        font-family: 'Roboto', sans-serif;
+        font-size: 30px;
+    }
+</style>
 <body>
     <div class="container">
         <h1>This is the sample coding file for learning git...</h1>
